# GitHub-SBOM-fetcher

./: .flake8  .gitignore  API_VS_SCRAPER_RESULTS.md  BRANCH_NAMES_AND_COUNT_EXPLANATION.md  DEBUG_MAPPING_GUIDE.md  DEBUG_RUN_ANALYSIS.md  DEDUPLICATION_RESULTS.md  DIRECTORY_STRUCTURE_CORRECTION.md  ENHANCEMENT_SUMMARY.md  FINAL_VALIDATION_REPORT.md  MAPPER_INVESTIGATION_NEEDED.md  NAMING_FIX_SUMMARY.md  PACKAGE_ECOSYSTEMS_REMOVAL.md  README.md  REFACTORING_COMPLETE.md  RELEASING.md  TEST_COVERAGE_REPORT.md  VALIDATION_RUN_RESULTS.md  fetch_sbom_hierarchy.py  github_sbom_api_fetcher.py  github_sbom_scraper_README.md  pyproject.toml  pytest.ini  requirements.txt  setup_environment.sh
.github/: BRANCH_PROTECTION.md  CI_CD_GUIDE.md  CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
archive_v1/: API_APPROACH_RECOMMENDATION.md  DEDUPLICATION_RECOMMENDATION.md  README_ARCHIVE.md  SBOM_VERSION_LIMITATION_ANALYSIS.md  TEST_COVERAGE_REPORT.md  UPGRADE_SUMMARY.md  dependencies_with_repos.csv  fetch_sbom.py  fetch_sbom_h_npm.py  fetch_sbom_hierarchy.py.bak  fetch_sbom_hierarchy_fixed.py  github_sbom_api_fetcher.py  github_sbom_scraper.py  requirements-dev.txt  setup.py  setup_environment.sh  test_copilot_chat_app.py  test_results.txt
docs/: BEATBOT_V1_V2_COMPARISON.md  CASCADE_STARTUP.md  CI_CD_CHECKS.md  CLEANUP_COMPLETE.md  CODE_COVERAGE_REQUIREMENTS.md  DEBUG_MAPPING_GUIDE.md  DIRECTORY_STRUCTURE_CORRECTION.md  FINAL_DIAGNOSTIC_SUMMARY.md  FINAL_STATUS.md  FINAL_VALIDATION_COMPLETE.md  FIXES_SUMMARY.md  INDEX.md  LEGACY_README.md  NAMING_FIXES_SUMMARY.md  NAMING_FIX_SUMMARY.md  PRODUCTION_RUN_SUCCESS.md  (+4 more)
(+967 files in other folders)
